--- a/package.json
+++ b/package.json
@@ -9,20 +9,29 @@
     "typecheck": "tsc"
   },
   "dependencies": {
+    "@chakra-ui/icons": "^2.1.1",
+    "@chakra-ui/react": "^2.8.2",
+    "@emotion/cache": "^11.13.1",
+    "@emotion/react": "^11",
+    "@emotion/server": "^11",
+    "@emotion/styled": "^11",
     "@remix-run/node": "2.10.0",
     "@remix-run/react": "2.10.0",
     "@remix-run/server-runtime": "2.10.0",
     "@vercel/analytics": "^1.2.2",
     "@vercel/remix": "2.10.0",
+    "framer-motion": "^6",
     "isbot": "^4",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-hook-form": "^7.53.0"
   },
   "devDependencies": {
     "@remix-run/dev": "2.10.0",
     "@remix-run/eslint-config": "2.10.0",
     "@types/react": "^18.2.20",
     "@types/react-dom": "^18.2.7",
+    "@vite-pwa/remix": "^0.1.0",
     "eslint": "^8.38.0",
     "typescript": "^5.1.6",
     "vite": "^5.1.0",
